--- a/templates/main.html
+++ b/templates/main.html
@@ -3,11 +3,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name='name' content = 'Gift'>
-<title> {{obj.title}} </title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title> {{obj.title}} </title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
 
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+	<script type="text/javascript" src="{{url_for('static',filename='js/pieChart.js')}}"></script>
+	<script type="text/javascript" src="{{url_for('static',filename='js/lineChart.js')}}"></script>
 </head>
 
 <body>
@@ -34,6 +37,12 @@
 	
 	{% if obj.attribute == 'visual' %}
 		<h2>Visual {{obj.id}}</h2>
+		{% if obj.id == 1 %}
+			<div id="pie_chart" style="width: 900px; height: 500px"></div>
+		{%endif%}
+		{% if obj.id == 2 %}
+			<div id="curve_line" style="width: 900px; height: 500px"></div>
+		{%endif%}
 	{%endif%}
 
 </div>
