--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,43 @@
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script type="text/javascript" src="{{url_for('static',filename='js/pieChart.js')}}"></script>
 	<script type="text/javascript" src="{{url_for('static',filename='js/lineChart.js')}}"></script>
-	<script type="text/javascript" src="{{url_for('static',filename='js/mapChart.js')}}"></script>
+	<script type="text/javascript">
+      google.charts.load('current', {'packages':['treemap', 'map']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Location', 'Parent', 'Market trade volume (size)', 'Market increase/decrease (color)'],
+          ['America',   null,             0,                               0],
+          ['Brazil',    'America',            11,                              10],
+          ['USA',       'America',            52,                              31],
+          ['Mexico',    'America',            24,                              12],
+          ['Canada',    'America',            16,                              -23],
+
+        ]);
+		
+		var geoView = new google.visualization.DataView(data);
+        geoView.setColumns([0]);
+		
+		var map =  new google.visualization.Map(document.getElementById('map_div'));
+        map.draw(geoView, {showTip: true});
+
+        tree = new google.visualization.TreeMap(document.getElementById('tree_div'));
+
+        tree.draw(data, {
+          minColor: '#f00',
+          midColor: '#ddd',
+          maxColor: '#0d0',
+          headerHeight: 15,
+          fontColor: 'black',
+          showScale: true
+        });
+		google.visualization.events.addListener(tree, 'select', function() {
+            map.setSelection(tree.getSelection());
+			  
+          });
+
+      }
+    </script>
 </head>
 
 <body>
@@ -46,7 +82,17 @@
 		{%endif%}
 		
 		{% if obj.id == 3 %}
-			<div id="map_view" style="width: 700px; height: 433px;"></div>
+			<table align="center">
+			  <tr valign="top">
+				<td style="width: 50%;">
+				  <div id="tree_div" style="width: 400px; height: 300;"></div>
+				  <p> Right click to go back one node up and right click to see children</p>
+				</td>
+				<td style="width: 50%;">
+				  <div id="map_div"></div>
+				</td>
+			  </tr>
+			</table>
 		{%endif%}
 		
 	{%endif%}
