--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,45 +3,120 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='name' content='Gift'>
+    <meta charset="utf-8">
     <title> {{obj.title}} </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-topnav ">
-        <h1 class="topnav">ENEDash </h1>
+        <div class="container">
+            <div class="navbar-header">
+                <a href="/home" class="navbar-brand">ENEDash</a>
+            </div>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navBarMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navBarMenu">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="#dashboard" class="nav-link"> Dashboard</a></li>
+                    <li class="nav-item"><a href="/login" class="nav-link"> LogIn</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <div class="sidebar">
-        <a href="/home"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="/visual"><i class="fa fa-fw fa-chart"></i>Dashboard</a>
 
+    <div class="carousel slide" id="TipsCarousel" data-ride="">
+        <ul class="carousel-indicators">
+            <li data-target="#TipsCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#TipsCarousel" data-slide-to="1"></li>
+            <li data-target="#TipsCarousel" data-slide-to="2"></li>
+        </ul>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item text-center p-4 active bg-dark text-white">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0_2nqm0H20gpO-Pf9BsBwuAYt3McWcb-6rFs37i244h71Lyrnkg">
+                <p>lorem ipsum (imagine longer text)</p>
+            </div>
+            <div class="carousel-item text-center p-4 bg-dark text-white">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0_2nqm0H20gpO-Pf9BsBwuAYt3McWcb-6rFs37i244h71Lyrnkg">
+                <p>lorem ipsum (imagine longer text)</p>
+            </div>
+            <div class="carousel-item text-center p-4 bg-dark text-white">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxcAozKAwdZB3FNoR2I6ojUhxqxD_IujxV1QlnPvvi0BFnuQWp">
+                <p>lorem ipsum (imagine longer text)</p>
+            </div>
+            <a class="carousel-control-prev" href="#TipsCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#TipsCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
 
-    <div class="main">
+    <section id="breadcrumb">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li class="active text-center"> <a name="dashboard">DashBoard</a> </li>
+            </ol>
+        </div>
 
-        {% if obj.attribute == 'home' %}
-        <h2>Your energy saving tips</h2>
-        <p>{{obj.paragraph}}</p>
-        {%endif%}
+    </section>
 
-        {% if obj.attribute == 'Dashboard' %}
-        <h2>The {{ obj.name }}</h2>
-        {%endif%}
+    <section id="main">
+        <div class="container">
+            <div class="row w-100 justify-content-center align-items-center">
+                <div class="col-md-4">
+                    <div>
+                        <div id="tree_div"> </div>
+                        <p> Right click to go back one node up and right click to see children</p>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div>
+                        <div id="map_div" ></div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="list-group">
+                        <a href="" class="list-group-item active main-color-bg">
+                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Least Efficient Buildings
+                        </a>
+                        <a href="" class="list-group-item breadcrumb"> Building 1<span class="badge">20 kW/ per user</span></a>
+                        <a href="" class="list-group-item  breadcrumb"> Building 2<span class="badge">17 kW/ per user</span></a>
+                        <a href="" class="list-group-item  breadcrumb"> Building 3<span class="badge">15 kW/ per user</span></a>
+                    </div>
 
-    </div>
+                    <div class="list-group">
+                        <a href="index.html" class="list-group-item active main-color-bg">
+                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Most Efficient Buildings
+                        </a>
+                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building A<span class="badge">5 kW/ per user</span></a>
+                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building B<span class="badge">10 kW/ per user</span></a>
+                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building C<span class="badge">10.5 kW/ per user</span></a>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="{{url_for('static',filename='js/tree_map.js')}}"></script>s
 </body>
 
 
-</html>
+</html> 
