--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navBarMenu">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="#dashboard" class="nav-link"> Dashboard</a></li>
-                    <li class="nav-item"><a href="/login" class="nav-link"> LogIn</a></li>
+                    <li class="nav-item"><a href="/login" class="nav-link"> Sign in</a></li>
                 </ul>
             </div>
         </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-5">
                     <div>
-                        <div id="map_div" ></div>
+                        <div id="map_div"></div>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -110,12 +110,18 @@
             </div>
         </div>
     </section>
-
+    <footer class="page-footer font-small bg-dark " style="margin-top: 30px;">
+        <div class="footer-copyright text-center text-white py-3">
+           
+            <p> Gift Langa (1043882)</p>
+        </div>
+    <!-- Copyright -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="{{url_for('static',filename='js/tree_map.js')}}"></script>s
+    <script type="text/javascript" src="{{url_for('static',filename='js/tree_map.js')}}"></script>
 </body>
 
 
