--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,10 +9,11 @@
 
 
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
+    <script type="text/javascript" src="{{url_for('static',filename='js/misc.js')}}"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
+   
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         </div>
     </nav>
 
-    <div class="carousel slide" id="TipsCarousel" data-ride="">
+    <div class="carousel slide" id="TipsCarousel" data-ride="carousel">
         <ul class="carousel-indicators">
             <li data-target="#TipsCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#TipsCarousel" data-slide-to="1"></li>
@@ -42,16 +43,16 @@
         </ul>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item text-center p-4 active bg-dark text-white">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0_2nqm0H20gpO-Pf9BsBwuAYt3McWcb-6rFs37i244h71Lyrnkg">
-                <p>lorem ipsum (imagine longer text)</p>
+                <img src="{{url_for('static',filename='pics/bulb.jpeg')}}">
+                <p>Switch off lights when you leave your room or office</p>
             </div>
             <div class="carousel-item text-center p-4 bg-dark text-white">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0_2nqm0H20gpO-Pf9BsBwuAYt3McWcb-6rFs37i244h71Lyrnkg">
-                <p>lorem ipsum (imagine longer text)</p>
+                <img src="{{url_for('static',filename='pics/led_bulb.jpeg')}}">
+                <p>Use energy efficient lighting where possible - like LED or flourescent light bulbs</p>
             </div>
             <div class="carousel-item text-center p-4 bg-dark text-white">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxcAozKAwdZB3FNoR2I6ojUhxqxD_IujxV1QlnPvvi0BFnuQWp">
-                <p>lorem ipsum (imagine longer text)</p>
+                <img src="{{url_for('static',filename='pics/tap_water.jpg')}}">
+                <p>Use water sparingly - don't leavex water running</p>
             </div>
             <a class="carousel-control-prev" href="#TipsCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -76,15 +77,14 @@
     <section id="main">
         <div class="container">
             <div class="row w-100 justify-content-center align-items-center">
-                <div class="col-md-4">
-                    <div>
-                        <div id="tree_div"> </div>
-                        <p> Right click to go back one node up and right click to see children</p>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div>
-                        <div id="map_div"></div>
+                <div class="col-sm-12 col-md-8 col-lg-8">
+                    <div class="card sticky-top">
+                        <div class="card-header text-center">
+                            <p>Click a building to see more details</p>
+                        </div>
+                        <div class="card-body">
+                            <div id="curve_line" class="chart"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -92,18 +92,21 @@
                         <a href="" class="list-group-item active main-color-bg">
                             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Least Efficient Buildings
                         </a>
-                        <a href="" class="list-group-item breadcrumb"> Building 1<span class="badge">20 kW/ per user</span></a>
-                        <a href="" class="list-group-item  breadcrumb"> Building 2<span class="badge">17 kW/ per user</span></a>
-                        <a href="" class="list-group-item  breadcrumb"> Building 3<span class="badge">15 kW/ per user</span></a>
+                        <script type="text/javascript">
+                            getBuildingRanking();
+                        </script>
+                        <script type="text/javascript">
+                            printBuildings(0);
+                        </script>
                     </div>
 
                     <div class="list-group">
                         <a href="index.html" class="list-group-item active main-color-bg">
                             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Most Efficient Buildings
                         </a>
-                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building A<span class="badge">5 kW/ per user</span></a>
-                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building B<span class="badge">10 kW/ per user</span></a>
-                        <a href="pages.html" class="list-group-item  breadcrumb"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Building C<span class="badge">10.5 kW/ per user</span></a>
+                        <script type="text/javascript">
+                            printBuildings(1);
+                        </script>
 
                     </div>
                 </div>
@@ -112,16 +115,19 @@
     </section>
     <footer class="page-footer font-small bg-dark " style="margin-top: 30px;">
         <div class="footer-copyright text-center text-white py-3">
-           
+
             <p> Gift Langa (1043882)</p>
+            <p style="font-size: 6pt;">Images courtesy of <a href="https://www.pexels.com">Pexels</a></p>
         </div>
-    <!-- Copyright -->
+        <!-- Copyright -->
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="{{url_for('static',filename='js/tree_map.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='js/lineChart.js')}}"></script>
+    <script>
+        google.charts.load('current', { 'packages': ['line'] });
+    </script>
 </body>
 
 
