--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -36,14 +36,14 @@
 
     <div class="container-fluid" style="margin-top: 60px;">
         <div class="row justify-content-center align-items-center">
-            {%for i in range(0,8)%}
+            {%for i in range(0,2)%}
             <div class="col-md-3 col-sm-4 ">
                 <!--Print widgets here-->
                 <div class="card  text-center" style="max-width: 250px;margin-top: 10px;">
                     <!--Header-->
                     <div class="card-header"><h4>Building Name</h4><h5>Data Logger</h5></div>
                     <!-- Image -->
-                    <img class="card-img-top" src="https://cms.qz.com/wp-content/uploads/2018/04/pie-chart_colorcorrected.jpeg?quality=75&strip=all&w=1100&h=619" alt="PhotoPie" style="width:100%">
+                    <img class="card-img-top" style="min-height:150px;max-height:150px" src="https://cms.qz.com/wp-content/uploads/2018/04/pie-chart_colorcorrected.jpeg?quality=75&strip=all&w=1100&h=619" alt="PhotoPie" style="width:100%">
 
                     <!--Body-->
                     <div class="card-body">
